# bitmagic_bench

./: CMakeLists.txt  bitscan.cpp  common.h  main.cpp
